src/MiniJava/Tests/DriverTests/extends_loop.mj
class Main
{
    public static void main() {}
}
class A extends B {}
class B extends C {}
class C extends A {} // should complain
